# ProyectoIA

./: CMakeLists.txt  Perceptron.cpp  main.cpp  mnist_reader.cpp  mnist_reader.h  perceptron10.cu  perceptron10.cuh
